--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,27 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "allowSyntheticDefaultImports": true, // 允许从没有设置默认导出的模块中默认导入。这并不影响代码的输出，仅为了类型检查。
+    "outDir": "./dist/", // 重定向输出目录
+    "sourceMap": true, // 生成相应的 .map文件
+    "noImplicitAny": false, // 在表达式和声明上有隐含的 any类型时报错。（默认为false，个人建议也为false，可以兼容之前的js代码，这里改为true是为了我自己检测哪些类型需要处理）
+    "module": "esnext", // 模块引入方式
+    "target": "es6", // 指定ECMAScript目标版本
+    "moduleResolution": "node", // 决定如何处理模块
+    "strict": false,
+    "baseUrl": ".",  // 解析非相对模块的基地址
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+      "esnext",
+      "dom"
+    ], // 编译过程中需要引入的库文件的列表。
+    "skipLibCheck": true, //忽略所有库中的声明文件（ *.d.ts）的类型检查。
+    "jsx": "react" // 在 .tsx文件里支持JSX
   },
   "include": [
-    "src"
+    "./src/**/*", // 这个表示处理根目录的src目录下所有的.ts和.tsx文件，并不是所有文件
+    // "declare module '*.png'"
+    "./typings/*"
   ]
 }
