--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@antv/g6": "^3.5.12",
     "@types/qs": "^6.9.3",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -39,6 +40,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.26",
     "autoprefixer": "^9.8.2",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
